--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server":"npm run start --prefix server",
+    "server":"npm run build --prefix server && npm run start --prefix server",
+    "build":"npm run build --prefix client",
+    "deploy":"npm run build && npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
