--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,29 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/server.js",
   "scripts": {
-    "start": "node index.js",
-    "watch": "nodemon index.js",
+    "watch": "rimraf ./build && tsc -w",
+    "start": "node build/server.js",
+    "dev": "nodemon -r dotenv/config build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "helmet": "^6.0.0",
+    "morgan": "^1.10.0",
+    "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.8.5",
+    "@types/pg": "^8.6.5",
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.8.4"
   }
 }
